# kio-zeroconf

./: .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt  org.kde.kio_zeroconf.metainfo.xml
kdedmodule/: CMakeLists.txt  dnssdwatcher.cpp  dnssdwatcher.h  dnssdwatcher.json  watcher.cpp  watcher.h
kioworker/: CMakeLists.txt  dnssd.cpp  dnssd.h  zeroconf.desktop  zeroconf.json  zeroconfurl.h
po/ar/: kio5_zeroconf.po
po/be/: kio5_zeroconf.po
po/bg/: kio5_zeroconf.po
po/bn/: kio5_zeroconf.po
po/br/: kio5_zeroconf.po
po/bs/: kio5_zeroconf.po
po/ca/: kio5_zeroconf.po
po/ca@valencia/: kio5_zeroconf.po
po/cs/: kio5_zeroconf.po
po/cy/: kio5_zeroconf.po
po/da/: kio5_zeroconf.po
po/de/: kio5_zeroconf.po
po/el/: kio5_zeroconf.po
po/en_GB/: kio5_zeroconf.po
po/eo/: kio5_zeroconf.po
po/es/: kio5_zeroconf.po
po/et/: kio5_zeroconf.po
po/eu/: kio5_zeroconf.po
po/fa/: kio5_zeroconf.po
po/fi/: kio5_zeroconf.po
po/fr/: kio5_zeroconf.po
po/ga/: kio5_zeroconf.po
po/gl/: kio5_zeroconf.po
po/he/: kio5_zeroconf.po
po/hi/: kio5_zeroconf.po
po/hne/: kio5_zeroconf.po
po/hr/: kio5_zeroconf.po
po/hsb/: kio5_zeroconf.po
po/hu/: kio5_zeroconf.po
po/ia/: kio5_zeroconf.po
po/id/: kio5_zeroconf.po
po/is/: kio5_zeroconf.po
po/it/: kio5_zeroconf.po
po/ja/: kio5_zeroconf.po
po/ka/: kio5_zeroconf.po
po/kk/: kio5_zeroconf.po
po/km/: kio5_zeroconf.po
po/ko/: kio5_zeroconf.po
po/lt/: kio5_zeroconf.po
po/lv/: kio5_zeroconf.po
po/mk/: kio5_zeroconf.po
po/ml/: kio5_zeroconf.po
po/mr/: kio5_zeroconf.po
po/ms/: kio5_zeroconf.po
po/nb/: kio5_zeroconf.po
po/nds/: kio5_zeroconf.po
po/ne/: kio5_zeroconf.po
po/nl/: kio5_zeroconf.po
po/nn/: kio5_zeroconf.po
po/oc/: kio5_zeroconf.po
po/pa/: kio5_zeroconf.po
po/pl/: kio5_zeroconf.po
po/pt/: kio5_zeroconf.po
po/pt_BR/: kio5_zeroconf.po
po/ro/: kio5_zeroconf.po
po/ru/: kio5_zeroconf.po
po/se/: kio5_zeroconf.po
po/sk/: kio5_zeroconf.po
po/sl/: kio5_zeroconf.po
po/sq/: kio5_zeroconf.po
po/sr/: kio5_zeroconf.po
po/sr@ijekavian/: kio5_zeroconf.po
po/sr@ijekavianlatin/: kio5_zeroconf.po
po/sr@latin/: kio5_zeroconf.po
po/sv/: kio5_zeroconf.po
po/ta/: kio5_zeroconf.po
po/th/: kio5_zeroconf.po
po/tr/: kio5_zeroconf.po
po/ug/: kio5_zeroconf.po
po/uk/: kio5_zeroconf.po
po/vi/: kio5_zeroconf.po
po/zh_CN/: kio5_zeroconf.po
po/zh_HK/: kio5_zeroconf.po
po/zh_TW/: kio5_zeroconf.po
